# taiwins-old

./: #renderer.c#  .gitignore  CMakeLists.txt  Makefile  README.md  connect.c  display.h  dox.conf  launch.c  modeset  modeset.c  next  note  renderer.c  renderer.h  safe-approach.sh  server.c  taiwins.org  taiwins_shell.c  test_tw_debug.c  tw_utils.c  tw_utils.h  utils.c  utils.h  vt_set  vt_set.c
clients/: .clang_complete  CMakeLists.txt  Note.md  buffer.c  buffer.h  desktop_shell.c  desktop_shell.c.bak  desktop_shell.h  desktop_shell_client.c  dummy.c  mmap_client.c  mmap_server.c  static_surface.c  surface.c  wayland.c  wayland.h  xdg-shell.c
common/: CMakeLists.txt  types.h
docs/: useful-res
include/: compositor.h  input.h  types.h  utils.h
libs/: CMakeLists.txt  Makefile
libs/common/: CMakeLists.txt  testtypes.c  types.c  types.h
libs/common/include/: types.h  zalloc.h
libs/common/src/common-build/: Makefile  install_manifest.txt
libs/common/tmp/: common-cfgcmd.txt
protocols/: CMakeLists.txt  double_buffer.xml  dummy.xml  taiwins_shell.xml
src/: #main.c#  .#main.c  .clang_complete  CMakeLists.txt  Makefile  debug.h  dummy_shell.c  handlers.cpp  handlers.h  input.c  input.cpp  layout.cpp  layout.h  main.c  protocols.c  protocols.h  render.c  taiwins  taiwins_shell.c  taiwins_shell.cpp  utils.c  utils.h  wm.cpp  wm.h  wm.h.bak
tests/: a.c  cairo.c  drmdropset.c  example.c  test_c.c  test_input.c  test_list.c  test_sigchld.c  test_tw_debug.c  test_udev.c  test_wlc.c
tests/back/: Makefile  background_extern.c  cairo.c  client.h  code.c  example.c  server.h  utils.c  utils.h
wayland/: server.c  server.h  shm.c
wm/: .#wm.c  note  wm.c  wm.h
